Updated FieldTypes swagger and code
