# Api_Site/swagger.json
@@ -39,6 +39,14 @@
 				"description": "Find out more",
 				"url": "http://localhost:4010/api/help"
 			}
+		},
+		{
+			"name": "FieldTypes",
+			"description": "Field types.",
+			"externalDocs": {
+				"description": "Find out more",
+				"url": "http://localhost:4010/api/help"
+			}
 		}
 		
 	],
@@ -578,6 +586,133 @@
 					}
 				}
 			}
+		},
+		"/FieldTypes": {
+			"get": {
+				"tags": [
+					"FieldTypes"
+				],
+				"description": "Get all the field types from the database.",
+				"parameters": [],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			},
+
+			"post": {
+				"tags": [
+					"FieldTypes"
+				],
+				"description": "Create a new field type on the database.",
+				"parameters": [
+					{
+						"in": "body",
+						"name": "body",
+						"description": "field type that needs to be added to the system",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/FieldTypesModel"
+						}
+					}
+				],
+				"responses": {
+					"201": {
+						"description": "Created"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			}
+
+		},
+		"/FieldTypes/{Id}": {
+			"get": {
+				"tags": [
+					"FieldTypes"
+				],
+				"description": "Get the field type from the database by the id.",
+				"parameters": [
+					{
+					"name": "Id",
+					"in": "path",
+					"description": "Id of field type that needs to be fetched",
+					"required": true,
+					"type": "integer",
+					"format": "int32"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			},
+			"put":{
+				"tags": [
+					"FieldTypes"
+				],
+				"description": "Update a field type record on the database.",
+				"parameters": [
+					{
+					"name": "Id",
+					"in": "path",
+					"description": "Id of field type that needs to be edited",
+					"required": true,
+					"type": "integer",
+					"format": "int32"
+					},
+					{
+						"in": "body",
+						"name": "body",
+						"description": "field type that needs to be edited",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/FieldTypesModel"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			},
+			"delete": {
+				"tags": [
+					"FieldTypes"
+				],
+				"description": "Delete a field type record from the database.",
+				"parameters": [
+					{
+					"name": "Id",
+					"in": "path",
+					"description": "Id of field type that needs to be removed",
+					"required": true,
+					"type": "integer",
+					"format": "int32"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				}
+			}
 		}
 		
 		
@@ -689,6 +824,27 @@
 				"inActive": {
 					"type": "bool",
 					"example": false
+				}
+			}
+		},
+		"FieldTypesModel": {
+			"type": "object",
+			"required": [
+				"name",
+				"description"
+			],
+			"properties": {
+				"name": {
+					"type": "string",
+					"example": "name"
+				},
+				"description": {
+					"type": "string",
+					"example": "description"
+				},
+				"inActive": {
+					"type": "string",
+					"example": "0"
 				}
 			}
 		}
